--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "spectron": "5.0.0",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "3.4.5",
     "wait-on": "3.2.0",
     "webdriver-manager": "12.1.0",
