--- a/package.json
+++ b/package.json
@@ -86,6 +86,10 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
+    "@angular/animations": "^8.0.0",
+    "@angular/cdk": "^8.0.0",
+    "@angular/forms": "^8.0.0 || ^9.0.0-0",
+    "@angular/material": "^8.0.0",
     "node-hid": "^0.7.9"
   }
 }
